--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "mdast-util-to-string": "^4.0.0",
     "micromorph": "^0.4.5",
     "minimatch": "^10.1.1",
+    "node-gyp": "^12.2.0",
     "pixi.js": "^8.15.0",
     "preact": "^10.28.2",
     "preact-render-to-string": "^6.6.5",
